fix: fixed lagging style issues
load blocks now are half the height of load bar so overflow issues are no longer apparent
paragraph fonts also are relative to vh and no longer overlap viewbox

--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -100,8 +100,8 @@ h3{
 }
 
 .block{
-  width: 1rem;
-  height: 1rem;
+  width: 1.75vh;
+  height: 1.75vh;
   background-color: #fff;
   animation: fillblock 4s linear infinite 2s;
   opacity: 0;
@@ -193,7 +193,7 @@ h3{
   p{
     font-family: 'retro';
     color: #070133;
-    font-size: 1.3rem;
+    font-size: 2.2vh;
   }
 }
 
